<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">
    <ImageView
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"/>
    <TextView
        android:text="@string/login_string"
        android:textSize="30sp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout1"
        android:background="@drawable/custom_edt"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email_string"
            android:inputType="textEmailAddress"
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout2"
        android:background="@drawable/custom_edt"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/pass_string_text"
            android:inputType="textPassword"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:text="@string/text_forgotpass"
        android:textColor="@color/sky_bg"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_forgetpass"
        android:layout_below="@id/layout2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:layout_below="@id/tv_forgetpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/sky_bg"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/text_login"
        android:backgroundTint="@color/sky_bg"
        android:textColor="@color/white"
        android:layout_below="@id/tv_forgetpass"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edt"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:id="@+id/btn_login"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="80dp"
        android:text="@string/text1"
        android:layout_width="wrap_content"
        android:id="@+id/text1"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/tv_signup"
        android:layout_marginStart="5dp"
        android:textColor="@color/sky_bg"
        android:textStyle="bold"
        android:layout_toEndOf="@id/text1"
        android:text="@string/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>