<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".activity.ReplacePassActivity">
    <LinearLayout
        android:id="@+id/layout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="16"
        android:background="@color/sky_bg"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:layout_weight="3"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_gravity="start|center"
            android:id="@+id/action_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="10"
            android:text="@string/replace_pass_text"
            android:gravity="center"
            android:layout_gravity="start|center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <EditText
        android:id="@+id/edt_email"
        android:background="@drawable/custom_edt"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:hint="@string/nh_p_email_c_a_b_n"
        android:layout_marginHorizontal="40dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_passold"
        android:background="@drawable/custom_edt"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="@string/nh_p_m_t_kh_u_c"
        android:layout_marginHorizontal="40dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_passnew"
        android:background="@drawable/custom_edt"
        app:layout_constraintTop_toBottomOf="@id/edt_passold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="Nhập mật khẩu mới"
        android:layout_marginHorizontal="40dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/edt_passnew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_seachview"
        android:backgroundTint="@color/sky_bg"
        android:layout_marginTop="50dp"
        android:id="@+id/btn_replace"
        android:text="@string/i_m_t_kh_u"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:id="@+id/progress"
        app:layout_constraintTop_toBottomOf="@id/edt_passnew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/sky_bg"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>