<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".fragments.UserFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="16"
        android:background="@color/sky_bg"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_gravity="start|center"
            android:id="@+id/btn_back"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="10"
            android:text="@string/tai_khoan_string"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
   <RelativeLayout
       android:id="@+id/relativelayout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/iv_avatar"
           android:layout_marginTop="20dp"
           android:layout_marginStart="20dp"
           android:layout_marginBottom="20dp"
           android:src="@drawable/ic_avatar"
           android:layout_width="60dp"
           android:layout_height="60dp"/>

       <ImageView
           android:id="@+id/action_upload_image"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@id/iv_avatar"
           android:layout_marginStart="-19dp"
           android:layout_marginBottom="1dp"
           android:layout_toEndOf="@id/iv_avatar"
           android:src="@drawable/baseline_edit_24" />

   </RelativeLayout>
    <TextView
        android:id="@+id/tv_email"
        android:text="dong@gmail.com"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:background="@color/bottomTabInActive"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <RelativeLayout
        android:id="@+id/goto_history"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/baseline_history_24"
            android:id="@+id/iv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/iv_history"
            android:text="@string/history_text_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/iv_next1"
            android:src="@drawable/baseline_navigate_next_24"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <View
        android:background="@color/black_overlay"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <RelativeLayout
        android:id="@+id/goto_replace_pass"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/baseline_password_24"
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/iv_password"
            android:text="@string/replace_pass_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/iv_next2"
            android:src="@drawable/baseline_navigate_next_24"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <View
        android:background="@color/black_overlay"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <RelativeLayout
        android:id="@+id/action_logout"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/baseline_logout_24"
            android:id="@+id/iv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_logout"
            android:text="@string/logout_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/iv_next3"
            android:src="@drawable/baseline_navigate_next_24"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <View
        android:background="@color/black_overlay"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>



</LinearLayout>