<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CartFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

       <LinearLayout
           android:orientation="horizontal"
           android:weightSum="16"
           android:background="@color/sky_bg"
           android:id="@+id/toolbar_cart"
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize">
           <ImageView
               android:src="@drawable/baseline_arrow_back_ios_24"
               android:layout_gravity="start|center"
               android:layout_weight="3"
               android:layout_width="0dp"
               android:id="@+id/btnBack"
               android:layout_height="wrap_content"/>
           <TextView
               android:layout_weight="10"
               android:text="@string/gi_h_ng"
               android:textColor="@color/white"
               android:textSize="20sp"
               android:layout_gravity="start|center"
               android:gravity="center"
               android:layout_width="0dp"
               android:layout_height="wrap_content"/>

       </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_cart"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:padding="5dp" />
        <LinearLayout
            android:id="@+id/layout_cartempty"
            android:visibility="gone"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_below="@id/toolbar_cart"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/cartemptys"
                android:layout_width="200dp"
                android:layout_height="200dp"/>
            <TextView
                android:id="@+id/btnContinue"
                android:padding="20dp"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/sky_bg"
                android:text="@string/ti_p_t_c_mua_h"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_emptycart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_cart"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img_emptycart"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/cartemptys" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_seachview"
                android:backgroundTint="#00B8D4"
                android:text="@string/ti_p_t_c_mua_h_ng"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/sky_bg"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_weight="5"
            android:gravity="start"
            android:text="Tổng Tiền: "
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_totalprice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginEnd="5dp"
            android:layout_weight="5"
            android:gravity="start"
            android:text="10 000 VND"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:gravity="start"
            android:text=" VND"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_mua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_weight="4"
            android:background="@drawable/custom_btn"
            android:backgroundTint="@color/red_bg"
            android:text="Mua"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>